fixed the background CSS so it covers 100% of the body

--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,28 @@
-#App {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 1.5em;
+body {
   background: linear-gradient(63deg, teal 23%, transparent 23%) 7px 0,
     linear-gradient(63deg, transparent 74%, teal 78%),
-    linear-gradient(
-      63deg,
-      transparent 34%,
-      teal 38%,
-      teal 58%,
-      transparent 62%
-    ),
+    linear-gradient(63deg, transparent 34%, teal 38%, teal 58%, transparent 62%),
     #333;
   background-size: 16px 48px;
-  /*border: 1px solid salmon;*/
+  margin: 16px;
 }
-#App div#FirstDiv {
-  display: block;
-  /* box-shadow: 0 2px 15px rgba(0, 0, 0, .4); */
-  box-sizing: content-box;
-  background-color: ghostwhite;
-  min-width: 350px;
-  width: 90vw;
-  min-height: 200px;
+
+div#root {
+  /* border: 1px solid salmon; */
   height: 100%;
-  border-radius: 5px;
+  margin: 0 auto;
+  /* overflow: hidden; */
+  width: 100%;
+}
+
+div#FirstDiv {
+  background-color: ghostwhite;
+  border-radius: 1.5em;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.4);
+  box-sizing: content-box;
+  height: 100%;
+  margin: 0 auto;
+  min-height: 200px;
+  min-width: 350px;
+  width: 98%;
 }
